<package>
  <name>chris_turtlebot_flexible_navigation</name>
  <version>0.1.1</version>
  <description>
    Meta-package for CNU Robotics CHRISLab Turtlebot specific Flexible Navigation System
  </description>
  <author>David Conner</author>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/CNURobotics/chris_ros_turtlebot/issues</url>
  <url type="repository">https://github.com/CNURobotics/chris_ros_turtlebot</url>
  <url type="website">https://github.com/CNURobotics/chris_ros_turtlebot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>flexible_navigation</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_states</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_behaviors</run_depend>
  <run_depend>chris_ros_turtlebot</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
