
<package>
  <name>flex_nav_turtlebot_bringup</name>
  <version>0.1.1</version>
  <description>Setup to demonstrate the FlexBE-based flexible_navigation setup using the Kobuki turtlebot setup</description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website">  </url>
  <url type="repository"> </url>
  <url type="bugtracker"> </url>
  <author>David Conner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>chris_turtlebot_bringup</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>flex_nav_planners</run_depend>
  <run_depend>flex_nav_controllers</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_states</run_depend>

  <export>

  </export>
</package>
