
<package format="2">
  <name>flex_nav_turtlebot_bringup</name>
  <version>0.2.1</version>
  <description>Setup to demonstrate the FlexBE-based flexible_navigation setup using the Kobuki turtlebot setup</description>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website">  </url>
  <url type="repository"> </url>
  <url type="bugtracker"> </url>
  <author>David Conner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <!--depend>gmapping</depend-->
  <depend>chris_turtlebot_bringup</depend>
  <depend>dwa_local_planner</depend>
  <depend>flex_nav_planners</depend>
  <depend>flex_nav_controllers</depend>
  <depend>flex_nav_flexbe_states</depend>
  <depend>flex_nav_turtlebot_flexbe_states</depend>

  <export>

  </export>
</package>
