<package>
  <name>flex_nav_turtlebot_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     Behaviors related to demonstration of flexible_navigation system using CHRISLab Kobuki Turtlebot
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>behavior_turtlebot_flex_planner</run_depend>
  <run_depend>behavior_turtlebot_simple_recovery</run_depend>

  <!-- Add here all ROS packages that contain behaviors -->
</package>
