<package>
  <name>flex_nav_turtlebot_flexbe_behaviors</name>
  <version>0.1.1</version>
  <description>
     Behaviors related to demonstration of flexible_navigation system using CHRISLab Kobuki Turtlebot
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_states</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
