<package>
  <name>behavior_turtlebot_flex_planner</name>
  <version>1.0.0</version>
  <description>
     Uses Flexible Navigation to control the robot
  </description>
  <maintainer email="todo@todo.com">Josh Cohen</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_turtlebot_flex_planner</url>
  <author>Josh Cohen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_states</run_depend>

</package>