<package>
  <name>behavior_turtlebot_simple_recovery</name>
  <version>1.0.0</version>
  <description>
     Stops the robot, clears the cost map and backs up
  </description>
  <maintainer email="justin.willis.13@cnu.edu">Justin Willis</maintainer>
  <license>BSD</license>

  <url>http://github.com/CNURobotics/chris_turtlebot_flexible_navigation</url>
  <author>Justin Willis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flex_nav_turtlebot_flexbe_states</run_depend>

</package>
